--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fl_chart: ^0.68.0
   http: ^0.13.6
   supabase_flutter: ^2.5.3
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
