--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.6
   supabase_flutter: ^2.5.3
   sqflite: ^2.3.3+1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
