--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   supabase_flutter: ^2.5.3
   sqflite: ^2.3.3+1
   device_info_plus: ^10.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
